# jsdec

./: .eslint.config.js  .eslintrc.json  .gitignore  DEVELOPERS.md  README.md  annotation_parser.py  eslint-check.sh  jsdec-duk.js  jsdec-test.js  meson.build  meson_options.txt
.ci-scripts/: ci-build-linux.sh  ci-build-win.bat  ci-build-win.ps1  ci-eslint.sh  ci-rizin-dl.py  ci-tests.sh  vsdevenv.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-plugin.yml  codeql.yml  continuous-tests.yml  release.yml
.reuse/: dep5
c/: jsdec-cutter.c  jsdec-cutter.h  jsdec-plugin.c  jsdec-standalone.c  jsdec.c  jsdec.h
cutter-plugin/: CMakeLists.txt  JSDecDecompiler.cpp  JSDecDecompiler.h  JSDecPlugin.cpp  JSDecPlugin.h
include/: jsdec-cutter.h
js/: jsdec-duk.js  jsdec-plugin.js  meson.build  require.js
js/libdec/: JSONex.js  annotation.js  context.js  core.js  long.js  printer.js  rzpipe.js  rzutil.js  testsuite.js  warning.js
js/libdec/arch/: 6502.js  8051.js  arm.js  avr.js  mips.js  riscv.js  x86.js
js/libdec/colors/: ansi.js  invalid.js
js/libdec/core/: base.js  block.js  classes.js  condition.js  controlflow.js  extra.js  functions.js  instruction.js  objc.js  objects.js  scope.js  strings.js  symbols.js
js/libdec/db/: c_calls.js  macros.js  syscalls.js
libdec/: annotation.js  archs.js  context.js  core.js  json64.js  libdec.js  long.js  printer.js  rzpipe.js  rzutil.js
libdec/arch/: arm.js  avr.js  dalvik.js  m68k.js  mips.js  ppc.js  riscv.js  sh.js  sparc.js  v850.js  wasm.js  x86.js
libdec/core/: base.js  condition.js  controlflow.js  functions.js  instruction.js  macro.js  objects.js  scope.js  strings.js  symbols.js  utils.js  variable.js  xrefs.js
libdec/db/: c_calls.js  cpp.js  macros.js
p/: Makefile  core_pdd.c  jsdec-test.c  jsdec_ctx.h  jsdec_jsc.c.in  make_jsc.py  meson.build  meson_options.txt
p/duktape/: duk_console.c
subprojects/: libquickjs.wrap  quickjs.wrap
subprojects/packagefiles/libquickjs/: meson.build  meson_options.txt  qjsc.c  quickjs.c  quickjs.h
tools/: annotation_parser.py  qjsc_mod.c
